project(gstreamer)

set(CMAKE_CXX_STANDARD 17)

include_directories(${SDP_CPP_PATH}/include)

set(GSTREAMER_EXAMPLE_SOURCES
    main.cpp
    
    ${SDP_CPP_PATH}/include/Attribute.h
    ${SDP_CPP_PATH}/include/Bandwidth.h
    ${SDP_CPP_PATH}/include/BaseAttribute.h
    ${SDP_CPP_PATH}/include/CandidateAttribute.h
    ${SDP_CPP_PATH}/include/CNameAttribute.h
    ${SDP_CPP_PATH}/include/Connection.h
    ${SDP_CPP_PATH}/include/CryptoAttribute.h
    ${SDP_CPP_PATH}/include/ExtMapAttribute.h
    ${SDP_CPP_PATH}/include/FingerprintAttribute.h
    ${SDP_CPP_PATH}/include/FormatAttribute.h
    ${SDP_CPP_PATH}/include/GroupAttribute.h
    ${SDP_CPP_PATH}/include/Information.h
    ${SDP_CPP_PATH}/include/Key.h
    ${SDP_CPP_PATH}/include/MediaDescription.h
    ${SDP_CPP_PATH}/include/MidAttribute.h
    ${SDP_CPP_PATH}/include/Origin.h
    ${SDP_CPP_PATH}/include/ParserException.h
    ${SDP_CPP_PATH}/include/PreviousSSRCAttribute.h
    ${SDP_CPP_PATH}/include/RTPMapAttribute.h
    ${SDP_CPP_PATH}/include/SCTPMapAttribute.h
    ${SDP_CPP_PATH}/include/SessionDescription.h
    ${SDP_CPP_PATH}/include/SessionName.h
    ${SDP_CPP_PATH}/include/SSRCAttribute.h
    ${SDP_CPP_PATH}/include/SSRCGroupAttribute.h
    ${SDP_CPP_PATH}/include/Timing.h
    
    ${SDP_CPP_PATH}/src/SessionDescription.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_dtext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_relative_part.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_method_ext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_base64_unit.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_port.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ssrc_group_semantics.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ice_char.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_time_repeat_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_media_descriptions.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_clksrc_param_name.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_extension_attributes.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_atom.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_quoted_pair.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_nettype.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_VCHAR.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_gen_delims.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_fingerprint.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_base64.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_time_fields.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_extmap_attribute.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_IPv4address.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_type.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_sctpmap_number.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_domain_char.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_extension_name.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_media.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_avb_stream_id.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_WSP.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_sess_version.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_email_safe.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_absolute_URI.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_IP_literal.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_param.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_email_address.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_integer.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_attribute_fields.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_h16.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_priority.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_gen_attribute.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_obs_text.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_FWS.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_qtext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_proto_version.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_session_description.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_number_of_ports.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_path_empty.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_crypto_attribute.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_sctpmap_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_qcontent.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_host.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_base64_key_type.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_hash_func.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_stop_time.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_scheme.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_private.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_CTL.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_version.cpp
    ${SDP_CPP_PATH}/src/abnf/ParserContext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_group_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_reserved.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_HTAB.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_path.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_domain_n2.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_CR.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_IP6_multicast.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_rate.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_foundation.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_version_ext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_DIGIT.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_previous_ssrc_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_mki_value.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_repeat_interval.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_unreserved.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_dot_atom_text.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_clksrc_param_value.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_att_value.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_email_fields.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_direct.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_uri_key_type.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_CFWS.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_phone.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_name.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_EUI64.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_LWSP.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_email_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_bandwidth.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_dec_octet.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_mki_length.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ctext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_bandwidth_fields.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ssrc_id.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ccontent.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_BIT.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_mediaclock.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_media_clksrc_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_rel_addr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_base64_pad.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_bwtype.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_start_time.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_hier_part.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_bandwidth_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_gal.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_extension_att_name.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_pct_encoded.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_media_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_IP4_multicast.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_OCTET.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_FQDN.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_local_part.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_clear_key_type.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_path_rootless.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_alpha_numeric.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_extn_addr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_filter_spec.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_URI.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_params.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_cname_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_CHAR.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_obs_char.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_sender.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_cand_type.cpp
    ${SDP_CPP_PATH}/src/abnf/Terminal_StringValue.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_server.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_phone_number.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_lifetime.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_pchar.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_SP.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_group_semantics.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_HEXDIG.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_authority.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_media_clktag.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_parameters.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_query.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_attribute_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_path_noscheme.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_dispname_and_address.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_proto.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ieee1722_streamid.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_time.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_transport_extension.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_att_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_session_name_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ssrc_group_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_obs_FWS.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_fmtp_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_media_clkid.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_comment.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_gps.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_segment.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_fragment.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ntp_server_addr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_IPvFuture.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ntp.cpp
    ${SDP_CPP_PATH}/src/abnf/Parser.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_domain_n1.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_relative_ref.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_atext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ttl.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_filter_mode.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_decimal_uchar_1xx.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_domain_literal.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_mediaclock_ext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_obs_qp.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_src_list.cpp
    ${SDP_CPP_PATH}/src/abnf/ParserAlternative.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_tag.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_hostport.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_decimal_uchar.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_fsrate.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ALPHA.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_mid_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_domain_nmbr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_m1.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_phone_fields.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_information_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_unicast_address.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_extension_identifier.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_sub_delims.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_quoted_string.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_domain_dgts.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_prompt_key_type.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_direction.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_word.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_base64_char.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_reg_name.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_CRLF.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_clksrc_ext.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ssrc_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_username.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_media_description.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_dot_atom.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_candidate_types.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_non_ws_string.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_domain.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_decimal_uchar_25x.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_timestamp_refclk_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_byte_string.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_addr_spec.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_connection_address.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_token.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_cname.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_info.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ls32.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_component_id.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_sess_id.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_text.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_streams.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_segment_nz.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_IPv6address.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_extension_att_value.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_segment_nz_nc.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_app.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_origin_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_address_and_comment.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_DQUOTE.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_address_types.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_session_param.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_typed_time.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_candidate_attribute.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_transport.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_dest_address.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_domain_n3.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_mediaclock_param_value.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_dcontent.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_obs_domain.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_clksrc.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_domain_name.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_uri_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_URI_reference.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_domain.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_addrtype.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_glonass.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_fingerprint_attribute.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_crypto_suite.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_attribute.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_fixed_len_time_unit.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_LF.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_EQUALS.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_connection_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_param_list.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_zone_adjustments.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_mediaclock_param_name.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_rel_port.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_method.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_rtpmap_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_mki.cpp
    ${SDP_CPP_PATH}/src/abnf/ParserException.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_repeat_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_obs_local_part.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_ptp_gmid.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_source_filter_attr.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_decimal_uchar_2xx.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_path_abempty.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_time_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_phone_field.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_POS_DIGIT.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_NO_WS_CTL.cpp
    ${SDP_CPP_PATH}/src/abnf/Terminal_NumericValue.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_local.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_userinfo.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_key_salt.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_path_absolute.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_fmt.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_identification_tag.cpp
    ${SDP_CPP_PATH}/src/abnf/Rule_extension_att.cpp
    ${SDP_CPP_PATH}/src/builders/SessionDescriptionBuilder.cpp
    ${SDP_CPP_PATH}/src/builders/Builder.cpp
    
    )


add_executable(gstreamer ${GSTREAMER_EXAMPLE_SOURCES})

include_directories(${EXAMPLE_GST_LIB_DIR}/httplib/
					${EXAMPLE_GST_LIB_DIR}/base64/
					${EXAMPLE_GST_LIB_DIR}/json/single_include/nlohmann/
					)

target_link_libraries(gstreamer pear ${TARGET_LIBS} gstreamer-1.0 gobject-2.0 glib-2.0)
